[package]
name = "compsdk"
version = "1.0.0"
authors = ["rarnu <hexj@isyscore.com>"]
description = "isyscore component sdk"
license = "Apache-2.0"
documentation = "https://github.com/isyscore/component-rs/wiki"
repository = "https://github.com/isyscore/component-rs"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
reqwest = { version = "0.11.5", features = ["blocking"] }
